--- a/installations/multi-node/install.yml
+++ b/installations/multi-node/install.yml
@@ -146,7 +146,7 @@
     - "~/.apigee-secure"
     - "~/.apigee"
   roles:
-  - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'qs-config'] }
+  - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'qs-config','analytics'] }
   - { role: apigee-opdk-update-component-qpidd }
   - { role: apigee-opdk-setup-silent-installation-config, tags: ['minimum', 'config', 'qs-config']  }
   - { role: apigee-opdk-setup-component, profile: 'qs', tags: ['minimum', 'qs-setup'] }
