--- a/post-installation/cassandra-rebuild/requirements.yml
+++ b/post-installation/cassandra-rebuild/requirements.yml
@@ -1,3 +1,4 @@
 ---
 - src: https://github.com/carlosfrias/apigee-opdk-cassandra-rebuild.git
+- src: https://github.com/carlosfrias/apigee-opdk-cassandra-repair.git
 
