--- a/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
+++ b/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
@@ -2,15 +2,16 @@
 - name: Create infrastructure
   hosts: localhost
   vars:
+    project_path: "5-node"
+    terraform_version: "0.12.0"
     terraform_download_links:
-      Debian: "https://releases.hashicorp.com/terraform/0.12.0/terraform_0.12.0_linux_amd64.zip"
-      MacOSX: "https://releases.hashicorp.com/terraform/0.12.0/terraform_0.12.0_darwin_amd64.zip"
+      Debian: "https://releases.hashicorp.com/terraform/{{ terraform_version }}/terraform_{{ terraform_version }}_linux_amd64.zip"
+      MacOSX: "https://releases.hashicorp.com/terraform/{{ terraform_version }}/terraform_{{ terraform_version }}_darwin_amd64.zip"
 #      Debian: "https://releases.hashicorp.com/terraform/0.11.13/terraform_0.11.13_linux_amd64.zip"
 #      MacOSX: "https://releases.hashicorp.com/terraform/0.11.13/terraform_0.11.13_darwin_amd64.zip"
 
   tasks:
     - name: Install archive managment packages
-      become: true
       package:
         name: "unzip"
         state: present
