--- a/infrastructure/ssh-tunnels/tunnel.yml
+++ b/infrastructure/ssh-tunnels/tunnel.yml
@@ -11,6 +11,8 @@
     - { target_ip_address: "{{ hostvars[groups['rmp'][1]]['private_address'] }}", target_port: "9002", port: "9002" }
     - { target_ip_address: "{{ hostvars[groups['rmp'][0]]['private_address'] }}", target_port: "59001", port: "59001" }
     - { target_ip_address: "{{ hostvars[groups['rmp'][1]]['private_address'] }}", target_port: "59001", port: "59001" }
+    - { target_ip_address: "{{ hostvars[groups['pgmaster'][0]]['private_address'] }}", target_port: "5432", port: "5432" }
+    - { target_ip_address: "{{ hostvars[groups['pgstandby'][1]]['private_address'] }}", target_port: "5433", port: "5433" }
 
   roles:
   - { role: apigee-opdk-settings-private-address, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
