--- a/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
+++ b/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
@@ -1,8 +1,13 @@
 ---
 - name: Create infrastructure
   hosts: localhost
+  var_prompts:
+    - name: project_path
+      prompt: "Which project do you want to build? ['5-node','aio','dev','prod']"
+      default: "5-node"
+      private: no
+
   vars:
-    project_path: "5-node"
     terraform_version: "0.12.0"
     terraform_download_links:
       Debian: "https://releases.hashicorp.com/terraform/{{ terraform_version }}/terraform_{{ terraform_version }}_linux_amd64.zip"
