--- a/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
+++ b/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
@@ -15,6 +15,7 @@
 
   tasks:
     - name: Install archive managment packages
+      become: true
       package:
         name: "unzip"
         state: present
