--- a/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
+++ b/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
@@ -17,7 +17,7 @@
       default: "us-east1-b"
       private: no
 
-    - name: gcp_credentials file
+    - name: gcp_credentials_file
       prompt: "Service Account Credentials File Path"
       default: "~/.apigee-secure/sandbox-1f5fb288d552.json"
       private: no
