--- a/infrastructure/gce-management/apigee-edge-tf/gce-destroy.yml
+++ b/infrastructure/gce-management/apigee-edge-tf/gce-destroy.yml
@@ -1,8 +1,21 @@
 ---
 - name: Create infrastructure
   hosts: localhost
-  vars:
-    project_path: "5-node"
+  vars_prompt:
+    - name: project_path
+      prompt: "Which project do you want to build? ['5-node','aio','dev','prod']"
+      default: "5-node"
+      private: no
+
+    - name: gcp_credentials_file
+      prompt: "Service Account Credentials File Path"
+      default: "{{ '~/.apigee-secure/sandbox-1f5fb288d552.json' | expanduser }}"
+      private: no
+
+    - name: gcp_project_name
+      prompt: "GCP Project Name"
+      default: "sandbox-173316"
+      private: no
 
   tasks:
     - name: Destroy infrastructure
