--- a/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
+++ b/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
@@ -73,7 +73,7 @@
         project_path: "{{ playbook_dir }}/{{ project_path }}"
         force_init: true
         state: present
-        workspace: "{{ playbook_dir }}/.terraform"
+        workspace: "{{ playbook_dir }}/terraform-workspace"
         state_file: "{{ playbook_dir }}/terraform.tfstate"
         variables:
           region: "{{ region }}"
