--- a/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
+++ b/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
@@ -33,6 +33,7 @@
       private: no
 
   vars:
+    terraform_workspace: "{{ playbook_dir }}/terraform-workspace"
     terraform_version: "0.12.5"
     terraform_download_links:
       Debian: "https://releases.hashicorp.com/terraform/{{ terraform_version }}/terraform_{{ terraform_version }}_linux_amd64.zip"
@@ -67,13 +68,18 @@
         dest: ./
         remote_src: yes
 
+    - name: Create terraform workspace folder
+      file:
+        path: "{{ terraform_workspace }}"
+        state: directory
+
     - name: Create infrastructure
       terraform:
         binary_path: "{{ playbook_dir }}/terraform"
         project_path: "{{ playbook_dir }}/{{ project_path }}"
         force_init: true
         state: present
-        workspace: "{{ playbook_dir }}/terraformworkspace"
+        workspace: "{{ terraform_workspace }}"
         state_file: "{{ playbook_dir }}/terraform.tfstate"
         variables:
           region: "{{ region }}"
