--- a/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
+++ b/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
@@ -81,7 +81,8 @@
         force_init: true
         state: planned
         workspace: "{{ terraform_workspace }}"
-        plan_file: "{{ terraform_plan }}/{{ terraform_plan }}"
+        plan_file: "{{ terraform_workspace }}/{{ terraform_plan }}"
+        state_file: "{{ terraform_workspace }}/{{ terraform_plan }}"
         variables:
           region: "{{ region }}"
           zone: "{{ zone }}"
@@ -96,7 +97,8 @@
         force_init: true
         state: present
         workspace: "{{ terraform_workspace }}"
-        plan_file: "{{ terraform_plan }}/{{ terraform_plan }}"
+        plan_file: "{{ terraform_workspace }}/{{ terraform_plan }}"
+        state_file: "{{ terraform_workspace }}/{{ terraform_plan }}"
         variables:
           region: "{{ region }}"
           zone: "{{ zone }}"
