--- a/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
+++ b/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
@@ -74,21 +74,21 @@
         path: "{{ terraform_workspace }}"
         state: directory
 
-    - name: Create infrastructure plan
-      terraform:
-        binary_path: "{{ playbook_dir }}/terraform"
-        project_path: "{{ playbook_dir }}/{{ project_path }}"
-        force_init: true
-        state: planned
-#        workspace: "{{ terraform_workspace }}"
-        plan_file: "{{ terraform_workspace }}/{{ terraform_plan }}"
-#        state_file: "{{ terraform_workspace }}/{{ terraform_plan }}"
-        variables:
-          region: "{{ region }}"
-          zone: "{{ zone }}"
-          credentials_file: "{{ gcp_credentials_file }}"
-          gcp_project_name: "{{ gcp_project_name }}"
-          service_account_email: "{{ service_account_email }}"
+#    - name: Create infrastructure plan
+#      terraform:
+#        binary_path: "{{ playbook_dir }}/terraform"
+#        project_path: "{{ playbook_dir }}/{{ project_path }}"
+#        force_init: true
+#        state: planned
+##        workspace: "{{ terraform_workspace }}"
+#        plan_file: "{{ terraform_workspace }}/{{ terraform_plan }}"
+##        state_file: "{{ terraform_workspace }}/{{ terraform_plan }}"
+#        variables:
+#          region: "{{ region }}"
+#          zone: "{{ zone }}"
+#          credentials_file: "{{ gcp_credentials_file }}"
+#          gcp_project_name: "{{ gcp_project_name }}"
+#          service_account_email: "{{ service_account_email }}"
 
     - name: Create infrastructure
       terraform:
