--- a/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
+++ b/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
@@ -96,7 +96,7 @@
         project_path: "{{ playbook_dir }}/{{ project_path }}"
         force_init: true
         state: present
-        workspace: "{{ terraform_workspace }}"
+#        workspace: "{{ terraform_workspace }}"
 #        plan_file: "{{ terraform_workspace }}/{{ terraform_plan }}"
 #        state_file: "{{ terraform_workspace }}/{{ terraform_plan }}"
         variables:
