--- a/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
+++ b/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
@@ -69,11 +69,11 @@
         dest: ./
         remote_src: yes
 
-    - name: Create terraform workspace folder
-      file:
-        path: "{{ terraform_workspace }}"
-        state: directory
-
+#    - name: Create terraform workspace folder
+#      file:
+#        path: "{{ terraform_workspace }}"
+#        state: directory
+#
 #    - name: Create infrastructure plan
 #      terraform:
 #        binary_path: "{{ playbook_dir }}/terraform"
@@ -98,7 +98,7 @@
         state: present
 #        workspace: "{{ terraform_workspace }}"
 #        plan_file: "{{ terraform_workspace }}/{{ terraform_plan }}"
-#        state_file: "{{ terraform_workspace }}/{{ terraform_plan }}"
+        state_file: "{{ terraform_workspace }}/{{ terraform_plan }}"
         variables:
           region: "{{ region }}"
           zone: "{{ zone }}"
