--- a/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
+++ b/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
@@ -19,7 +19,7 @@
 
     - name: gcp_credentials_file
       prompt: "Service Account Credentials File Path"
-      default: "{{ ~/.apigee-secure/sandbox-1f5fb288d552.json | expanduser }}"
+      default: "{{ '~/.apigee-secure/sandbox-1f5fb288d552.json' | expanduser }}"
       private: no
 
     - name: gcp_project_name
