introduced variables for parameterization of scripts

--- a/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
+++ b/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
@@ -27,6 +27,11 @@
       default: "sandbox-173316"
       private: no
 
+    - name: service_account_email
+      prompt: "Service Account Email"
+      default: "736255665193-compute@developer.gserviceaccount.com"
+      private: no
+
   vars:
     terraform_version: "0.12.0"
     terraform_download_links:
