--- a/installations/multi-node/install.yml
+++ b/installations/multi-node/install.yml
@@ -27,6 +27,7 @@
   vars:
     property_folders:
     - "~/.apigee-secure"
+    - "~/.apigee"
   roles:
   - { role: apigee-opdk-modules, tags: ['minimum', 'cache', 'license', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup','common'] }
   - { role: apigee-opdk-settings-private-address, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
@@ -52,6 +53,7 @@
   vars:
     property_folders:
     - "~/.apigee-secure"
+    - "~/.apigee"
   roles:
   - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'ds-config']  }
   - { role: apigee-opdk-setup-silent-installation-config, tags: ['minimum', 'config', 'ds-config'] }
@@ -66,6 +68,7 @@
   vars:
     property_folders:
     - "~/.apigee-secure"
+    - "~/.apigee"
   roles:
   - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'ms-config', 'os-openldap'] }
   - { role: apigee-opdk-setup-os-openldap, tags: ['os-openldap'] }
@@ -86,6 +89,7 @@
   vars:
     property_folders:
     - "~/.apigee-secure"
+    - "~/.apigee"
   roles:
   - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'r-config'] }
   - { role: apigee-opdk-setup-silent-installation-config, tags: ['minimum', 'config', 'r-config']  }
@@ -103,6 +107,7 @@
   vars:
     property_folders:
     - "~/.apigee-secure"
+    - "~/.apigee"
   roles:
   - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'mp-config'] }
   - { role: apigee-opdk-setup-silent-installation-config, tags: ['minimum', 'config', 'mp-config']  }
@@ -119,6 +124,7 @@
   vars:
     property_folders:
     - "~/.apigee-secure"
+    - "~/.apigee"
   roles:
   - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'qs-config','analytics'] }
   - { role: apigee-opdk-update-component-qpidd }
@@ -136,6 +142,7 @@
   vars:
     property_folders:
     - "~/.apigee-secure"
+    - "~/.apigee"
   roles:
     - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'pg-config'] }
     - { role: apigee-opdk-settings-postgres, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
@@ -152,6 +159,7 @@
   vars:
     property_folders:
     - "~/.apigee-secure"
+    - "~/.apigee"
   roles:
     - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'pgmaster-config'] }
     - { role: apigee-opdk-settings-postgres, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
@@ -170,6 +178,7 @@
   vars:
     property_folders:
     - "~/.apigee-secure"
+    - "~/.apigee"
   roles:
   - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'pgstandby-config'] }
   - { role: apigee-opdk-settings-postgres, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
@@ -188,6 +197,7 @@
   vars:
     property_folders:
     - "~/.apigee-secure"
+    - "~/.apigee"
   roles:
   - { role: apigee-opdk-modules, tags: ['config', 'org-config'] }
   - { role: apigee-opdk-setup-org, tags: ['org-setup'] }
