--- a/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
+++ b/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
@@ -33,17 +33,27 @@
       private: no
 
   vars:
+    terraform_state_file: "{{ playbook_dir }}/terrform.tfstate"
+    terraform_workspace: ".terraform"
+#    terraform_workspace: "{{ playbook_dir }}/.terraform"
     terraform_version: "0.12.0"
     terraform_download_links:
       Debian: "https://releases.hashicorp.com/terraform/{{ terraform_version }}/terraform_{{ terraform_version }}_linux_amd64.zip"
       MacOSX: "https://releases.hashicorp.com/terraform/{{ terraform_version }}/terraform_{{ terraform_version }}_darwin_amd64.zip"
 
   tasks:
-    - name: Install archive managment packages
+    - name: Install archive management packages
       become: true
       package:
         name: "unzip"
         state: present
+      when: ansible_distribution != "MacOSX"
+
+    - name: Install archive management packages on Mac
+      package:
+        name: "unzip"
+        state: present
+      when: ansible_distribution == "MacOSX"
 
     - name: Set terraform link
       set_fact:
@@ -59,13 +69,27 @@
         src: "{{ terraform_download_link | basename }}"
         dest: ./
         remote_src: yes
+#
+#    - name: Create workspace folder
+#      shell: "{{ playbook_dir }}/terraform init"
+
+    - name: Initialize terraform state file
+      terraform:
+        binary_path: "{{ playbook_dir }}/terraform"
+        project_path: "{{ playbook_dir }}/{{ project_path }}"
+        state: planned
+        force_init: 'yes'
+        workspace: "{{ terraform_workspace }}"
+        plan_file: "{{ terraform_state_file }}"
 
     - name: Create infrastructure
       terraform:
         binary_path: "{{ playbook_dir }}/terraform"
         project_path: "{{ playbook_dir }}/{{ project_path }}"
-        force_init: true
         state: present
+        state_file: "{{ terraform_state_file }}"
+        plan_file: "{{ terraform_state_file }}"
+        workspace: "{{ terraform_workspace }}"
         variables:
           region: "{{ default_region }}"
           zone: "{{ default_zone }}"
