updated file names

--- a/infrastructure/gce-management/apigee-edge-tf/gce-destroy.yml
+++ b/infrastructure/gce-management/apigee-edge-tf/gce-destroy.yml
@@ -19,7 +19,7 @@
 
   vars:
     terraform_state_file: "{{ playbook_dir }}/terraform.tfstate"
-    terraform_workspace: "{{ playbook_dir }}/.terraform"
+    terraform_workspace: "{{ playbook_dir }}/terraform"
 
   tasks:
     - name: Destroy infrastructure
