--- a/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
+++ b/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
@@ -80,7 +80,7 @@
         project_path: "{{ playbook_dir }}/{{ project_path }}"
         state: planned
         force_init: 'yes'
-        workspace: "{{ terraform_workspace }}"
+#        workspace: "{{ terraform_workspace }}"
         plan_file: "{{ terraform_state_file }}"
         variables:
           region: "{{ default_region }}"
@@ -95,7 +95,7 @@
         state: present
         state_file: "{{ terraform_state_file }}"
         plan_file: "{{ terraform_state_file }}"
-        workspace: "{{ terraform_workspace }}"
+#        workspace: "{{ terraform_workspace }}"
         variables:
           region: "{{ default_region }}"
           zone: "{{ default_zone }}"
