--- a/infrastructure/gce-management/apigee-edge-tf/gce-destroy.yml
+++ b/infrastructure/gce-management/apigee-edge-tf/gce-destroy.yml
@@ -31,7 +31,7 @@
         state: absent
         state_file: "{{ terraform_state_file }}"
         plan_file: "{{ terraform_state_file }}"
-        workspace: "{{ terraform_workspace }}"
+#        workspace: "{{ terraform_workspace }}"
         variables:
           credentials_file: "{{ gcp_credentials_file }}"
           gcp_project_name: "{{ gcp_project_name }}"
