--- a/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
+++ b/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
@@ -74,27 +74,27 @@
 #    - name: Create workspace folder
 #      shell: "{{ playbook_dir }}/terraform init"
 
-    - name: Initialize terraform state file
-      terraform:
-        binary_path: "{{ playbook_dir }}/terraform"
-        project_path: "{{ playbook_dir }}/{{ project_path }}"
-        state: planned
-        force_init: 'yes'
-#        workspace: "{{ terraform_workspace }}"
-        plan_file: "{{ terraform_state_file }}"
-        variables:
-          region: "{{ default_region }}"
-          zone: "{{ default_zone }}"
-          credentials_file: "{{ gcp_credentials_file }}"
-          gcp_project_name: "{{ gcp_project_name }}"
+#    - name: Initialize terraform state file
+#      terraform:
+#        binary_path: "{{ playbook_dir }}/terraform"
+#        project_path: "{{ playbook_dir }}/{{ project_path }}"
+#        state: planned
+#        force_init: 'yes'
+##        workspace: "{{ terraform_workspace }}"
+#        plan_file: "{{ terraform_state_file }}"
+#        variables:
+#          region: "{{ default_region }}"
+#          zone: "{{ default_zone }}"
+#          credentials_file: "{{ gcp_credentials_file }}"
+#          gcp_project_name: "{{ gcp_project_name }}"
 
     - name: Create infrastructure
       terraform:
         binary_path: "{{ playbook_dir }}/terraform"
         project_path: "{{ playbook_dir }}/{{ project_path }}"
         state: present
-        state_file: "{{ terraform_state_file }}"
-        plan_file: "{{ terraform_state_file }}"
+#        state_file: "{{ terraform_state_file }}"
+#        plan_file: "{{ terraform_state_file }}"
 #        workspace: "{{ terraform_workspace }}"
         variables:
           region: "{{ default_region }}"
