Updating infrastructure creation playbooks

--- a/infrastructure/gce-management/gce-dynamic/create-bastion-host.yml
+++ b/infrastructure/gce-management/gce-dynamic/create-bastion-host.yml
@@ -3,7 +3,7 @@
   tags: ['instances', 'bastion', 'disks']
   gcp_compute_disk:
     name: '{{ name_instance }}-bastion-disk'
-    size_gb: "{{ disk_size }}"
+    size_gb: "{{ bastion_disk_size | default(disk_size)  }}"
     source_image: '{{ disk_source_image }}'
     zone: "{{ gcp_zone }}"
     project: "{{ gcp_project }}"
@@ -17,7 +17,7 @@
 - name: create a bastion host
   tags: ['instances', 'bastion']
   gcp_compute_instance:
-    name: "bastion-host"
+    name: "apigee-bastion"
     state: present
     machine_type: "{{ machine_type }}"
     disks:
