udpated infrastructure setup

--- a/infrastructure/gce-management/apigee-edge-tf/gce-destroy.yml
+++ b/infrastructure/gce-management/apigee-edge-tf/gce-destroy.yml
@@ -26,12 +26,13 @@
       terraform:
         binary_path: "{{ playbook_dir }}/terraform"
         project_path: "{{ playbook_dir }}/{{ project_path }}"
-        force_init: true
-        purge_workspace: yes
         state: absent
-        state_file: "{{ terraform_state_file }}"
-        plan_file: "{{ terraform_state_file }}"
+        purge_workspace: yes
+#        state_file: "{{ terraform_state_file }}"
+#        plan_file: "{{ terraform_state_file }}"
 #        workspace: "{{ terraform_workspace }}"
         variables:
+          region: "{{ default_region }}"
+          zone: "{{ default_zone }}"
           credentials_file: "{{ gcp_credentials_file }}"
           gcp_project_name: "{{ gcp_project_name }}"
