udpated infrastructure setup

--- a/infrastructure/ssh-bastion-host/bastion_host_attribute.yml
+++ b/infrastructure/ssh-bastion-host/bastion_host_attribute.yml
@@ -1,6 +1,6 @@
 ---
-target_host_range: 10.*.*.*
-protected_private_key: ~/.ssh/google_compute_engine
+bastion_target_host_range: 10.*.*.*
+bastion_protected_private_key: ~/.ssh/google_compute_engine
 bastion_host_name: apigee-bastion.us-east1-b.sandbox-173316
 
 bastion_host_private_key: ~/.ssh/google_compute_engine
